--- a/front-end/src/containers/GiftCards/components/GiftCardForm/styles.scss
+++ b/front-end/src/containers/GiftCards/components/GiftCardForm/styles.scss
@@ -1,21 +1,16 @@
 @import "../../../../styles/variables/variables";
 
 .gift-card-form {
-  border: 1px solid $text-light-gray;
-  box-shadow: $shadow-primary;
-  padding: 50px;
-  margin: 40px;
-  background-color: white;
 
   %input-field {
     display: block;
     width: 100%;
     border-radius: 4px;
     border: 1px solid $text-light-gray;
-    padding: 0 20px;
+    padding: 0 15px;
     font-size: $mobile-regular-font-size;
     font-family: 'Montserrat-Medium';
-    margin-top: 10px;
+    margin: 10px 0;
 
     &::placeholder {
       color: #5B5B5B50;
@@ -33,14 +28,13 @@
 
   input {
     @extend %input-field;
-    height: 60px;
+    height: 46px;
   }
 
   textarea {
     @extend %input-field;
-    height: 180px;
+    height: 90px;
     resize: none;
-    padding: 20px;
   }
 
   .gift-card-form-name {
@@ -49,18 +43,8 @@
     font-family: 'Montserrat-Medium';
   }
 
-  .gift-card-form-double-inputs {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 40px;
-    
-    input {
-      width: calc(50% - 13px);
-    }
-  }
-
   .gift-card-form-datepicker {
-    margin-top: 20px;
+    margin-top: 10px;
 
     .gift-card-form-datepicker-title {
       color: $text-light-gray;
@@ -69,7 +53,7 @@
   }
 
   .gift-card-form-message {
-    margin-top: 20px;
+    margin-top: 10px;
 
     .gift-card-form-message-title {
       color: $text-light-gray;
@@ -79,28 +63,36 @@
 
   .btn-checkout {
     width: 100%;
-    height: 60px;
+    height: 46px;
     color: white;
     border-radius: 4px;
-    margin-top: 30px;
+    margin-top: 15px;
     border: 1px solid $green-secondary;
     font-size: $mobile-regular-font-size;
   }
+
+  .btn-redeem-code {
+    width: 184px;
+    height: 47px;
+    background-color: #FAFBFC;
+    border: 1px solid #B7CBB8;
+    font-size: $mobile-regular-font-size - 1;
+    color: $green-secondary;
+    border-radius: 4px;
+    box-shadow: unset;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: 30px;
+  }
+
+  .div-bottom-instruction {
+    text-align: center;
+    font-size: $mobile-regular-font-size - 2;
+    margin-top: 20px;
+  }
   
   @media (max-width: 1024px) {
-    padding: 25px 30px;
-
-    .gift-card-form-double-inputs {
-      display: flex;
-      flex-direction: column;
-      // margin-bottom: 20o;
-      
-      input {
-        width: 100%;
-      }
-    }
-
-    .btn-checkout {
+    .btn-checkout, .btn-redeem-code {
       font-size: $small-font-size;
     }
   }
@@ -121,10 +113,6 @@
     textarea {
       height: 207px;
       padding: 15px;
-    }
-
-    .gift-card-form-double-inputs {
-      margin-bottom: 0;
     }
 
     .gift-card-form-name {
@@ -148,8 +136,7 @@
       }
     }
   
-    .btn-checkout {
-      height: 48px;
+    .btn-checkout, .btn-redeem-code {
       font-size: $mobile-regular-font-size;
       margin-top: 20px;
     }
