[FE] import fonts

--- a/front-end/src/containers/Home/components/BottomForm/styles.scss
+++ b/front-end/src/containers/Home/components/BottomForm/styles.scss
@@ -4,7 +4,7 @@
   .bottom-form-title {
     width: 100%;
     text-align: center;
-    font-family: 'Montserrat-Medium';
+    font-family: 'CeraPro-Medium';
     font-size: $mobile-regular-font-size;
     color: #6A6D75;
   }
@@ -40,6 +40,7 @@
     width: 100%;
     text-align: center;
     font-size: $mobile-regular-font-size;
+    font-family: 'CeraPro-Regular';
     color: #6A6D75;
     margin-top: 30px;
   }
