--- a/front-end/src/styles/_fonts.scss
+++ b/front-end/src/styles/_fonts.scss
@@ -71,5 +71,20 @@
 
 @font-face {
   font-family: 'Brandon-Regular';
-  src: url('../assets/fonts/Brandon/brandon-regular.otf') format('opentype');
+  src: url('../assets/fonts/Brandon/Brandon_reg.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'CeraPro-Medium';
+  src: url('../assets/fonts/Cera/Cera Pro Medium.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'CeraPro-Regular';
+  src: url('../assets/fonts/Cera/Cera Pro Regular.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'CeraPro-Bold';
+  src: url('../assets/fonts/Cera/Cera Pro Bold.otf') format('opentype');
 }
