[FE] update menu modal, sign up page

--- a/front-end/src/containers/Modals/MenuModal/component/ExpandableDescription/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/component/ExpandableDescription/styles.scss
@@ -2,6 +2,9 @@
 
 .div-description-text {
   opacity: 0.58;
+  font-size: $mobile-regular-font-size;
+  color: #323232;
+  opacity: 0.55;
 
   a {
     color: $green-primary;
