--- a/front-end/src/containers/Modals/MenuModal/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/styles.scss
@@ -26,16 +26,16 @@
     flex-direction: row;
 
     .div-menu-modal-thumbnails {
-      padding-top: 50px;
-      padding-left: 50px;
+      padding-top: 40px;
+      padding-left: 40px;
       padding-right: 10px;
       box-sizing: content-box;
     }
 
     .div-menu-modal-image-detail {
       position: relative;
-      padding-top: 50px;
-      padding-bottom: 50px;
+      padding-top: 40px;
+      padding-bottom: 40px;
       box-sizing: content-box;
 
       display: flex;
@@ -43,8 +43,8 @@
       justify-content: space-between;
 
       .img-menu {
-        width: 534px;
-        height: 511px;
+        width: 440px;
+        height: 440px;
         flex-grow: 1;
         object-fit: contain;
         border: 1px solid $border-gray;
@@ -52,8 +52,8 @@
 
       .span-offer {
         position: absolute;
-        margin-top: 20px;
-        font-size: $minor-font-size;
+        margin-top: 13px;
+        font-size: $mobile-regular-font-size - 1.5;
         color: white;
         background-color: $green-primary;
         padding: 10px 25px;
@@ -63,7 +63,7 @@
       .div-menu-info-list {
         display: flex;
         flex-direction: row;
-        margin-top: 40px;
+        margin-top: 35px;
 
         .div-menu-info {
           display: flex;
@@ -77,18 +77,18 @@
           }
 
           .span-menu-info-value {
-            font-size: $medium-font-size;
+            font-size: 25px;
           }
 
           .span-menu-info-title {
-            font-size: $small-font-size;
+            font-size: $mobile-regular-font-size - 1;
           }
         }
 
         .div-menu-info-separator {
           background-color: $text-light-gray;
           width: 1px;
-          opacity: 0.58;
+          opacity: 0.46;
           margin: 12px 0;
           box-sizing: border-box;
         }
@@ -101,19 +101,19 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 0 50px 50px 50px;
-    max-width: 760px;
+    padding: 0 40px 40px 40px;
+    max-width: 660px;
 
     .div-menu-modal-description {
       position: relative;
       flex-grow: 1;
-      max-height: 510px;
-      margin-top: 50px;
+      max-height: 440px;
+      margin-top: 40px;
       overflow-y: scroll;
 
       /* width */
       &::-webkit-scrollbar {
-        width: 15px;
+        width: 6px;
       }
 
       /* Track */
@@ -132,35 +132,34 @@
       }
 
       .div-menu-title {
-        font-size: $medium-font-size;
-        color: $bg-footer-primary;
-        opacity: 0.58;
+        font-size: 25px;
+        color: #323232;
+        opacity: 0.7;
       }
 
       .div-menu-specialities {
         display: flex;
         flex-direction: row;
-        margin-top: 40px;
-        margin-left: 10px;
-        margin-bottom: 40px;
+        margin-top: 20px;
+        margin-bottom: 20px;
 
         .div-menu-speciality {
           display: flex;
           flex-direction: column;
           align-items: center;
-          max-width: 70px;
-          margin-right: 50px;
+          max-width: 50px;
+          margin-right: 40px;
 
           img {
-            width: 30px;
-            height: 30px;
+            width: 26px;
+            height: 25px;
           }
 
           span {
             color: $green-primary;
-            font-size: $small-font-size;
+            font-size: $mobile-regular-font-size - 1;
             text-align: center;
-            margin-top: 5px;
+            margin-top: 2px;
           }
         }
       }
@@ -168,18 +167,18 @@
       .div-ingredients-list {
         display: flex;
         flex-direction: column;
-        margin-top: 40px;
-        margin-bottom: 40px;
+        margin-top: 15px;
+        margin-bottom: 20px;
 
         .div-ingredients-list-title {
-          color: #080808;
-          margin-bottom: 10px;
-          font-family: 'Montserrat-SemiBold';
+          color: #6E6E6E;
+          margin-bottom: 5px;
+          font-size: $mobile-regular-font-size;
         }
 
         .div-ingredients {
-          color: $text-light-gray;
-          font-size: $small-font-size;
+          color: #6F6F6F;
+          font-size: $mobile-regular-font-size;
           margin-right: 5px;
         }
       }
@@ -203,17 +202,17 @@
       .div-special-instructions {
         display: flex;
         flex-direction: column;
-        margin: 30px 20px 0 0;
+        margin: 0px 20px 0 0;
 
         .div-special-instructions-title {
-          color: #080808;
-          font-family: 'Montserrat-SemiBold';
+          color: #6E6E6E;
+          font-size: $mobile-regular-font-size;
         }
 
         .input-special-instructions {
           border-radius: 9px;
           border: 1px solid #A0A0A0;
-          height: 120px;
+          height: 66px;
           margin-top: 20px;
           padding: 15px;
           resize: none;
@@ -232,7 +231,7 @@
     .div-menu-modal-cart {
       position: relative;
       display: flex;
-      height: 67px;
+      height: 54px;
       margin-top: 30px;
 
       .increment-counter {
@@ -242,12 +241,10 @@
       }
 
       .btn-add-to-cart {
-        width: 50%;
+        width: 194px;
+        height: 100%;
         margin-left: 10px;
-
-        @media (max-width: 1024px) {
-          height: 67px;
-        }
+        font-size: $mobile-regular-font-size;
       }
 
       .btn-add-to-cart-full {
@@ -284,7 +281,7 @@
       margin-top: 20px;
 
       .div-menu-modal-image-detail {
-        padding-right: 50px;
+        padding-right: 40px;
       }
     }
 
@@ -297,7 +294,7 @@
       }
 
       .div-opacity-layer-top {
-        top: -50px;
+        top: -40px;
       }
     }
   }
