--- a/front-end/src/containers/HelpCenter/components/HelpSearchBar/styles.scss
+++ b/front-end/src/containers/HelpCenter/components/HelpSearchBar/styles.scss
@@ -10,7 +10,7 @@
     border-radius: 27px;
     border: 0.5px solid rgba(25,25,25,0.45);
     padding: 0 20px 0 45px;
-    font-size: $mobile-regular-font-size;
+    font-size: $mobile-regular-font-size - 1;
 
     &:focus {
       border: 3px solid $green-primary;
