--- a/front-end/src/containers/Home/components/HowItWorks/styles.scss
+++ b/front-end/src/containers/Home/components/HowItWorks/styles.scss
@@ -43,10 +43,10 @@
     background-color: transparent;
     border: 1px solid #18AD1F;
     color: $green-primary;
-    font-size: $small-font-size - 1;
+    font-size: $mobile-regular-font-size;
     font-family: 'Montserrat-Medium';
-    width: 200px;
-    height: 54px;
+    width: 194px;
+    height: 53px;
     border-radius: 32px;
     box-shadow: unset;
     margin-top: 40px;
