--- a/front-end/src/containers/Home/components/BottomForm/styles.scss
+++ b/front-end/src/containers/Home/components/BottomForm/styles.scss
@@ -21,9 +21,9 @@
     input {
       flex-grow: 1;
       height: 100%;
-      padding: 0 20px;
+      padding: 0 12px;
       font-size: $mobile-regular-font-size;
-      font-family: 'OpenSans-Light';
+      font-family: 'OpenSans-Regular';
     }
   }
 
@@ -33,6 +33,7 @@
     font-size: $mobile-regular-font-size - 1;
     font-family: 'Montserrat-Medium';
     border-radius: 4px;
+    border: .75px solid #3E8541;
     margin-right: 3px;
   }
 
