--- a/front-end/src/containers/Home/components/LocationSearchField/styles.scss
+++ b/front-end/src/containers/Home/components/LocationSearchField/styles.scss
@@ -14,7 +14,7 @@
   input {
     flex-grow: 100;
     padding: 0 20px;
-    font-size: $small-font-size - 2;
+    font-size: $mobile-regular-font-size + 1;
     font-family: 'OpenSans-Regular'; 
     caret-color: $green-primary;
   }
@@ -22,8 +22,10 @@
   .button {
     max-width: 170px;
     height: 51px;
-    font-size: $small-font-size - 2;
+    font-size: $mobile-regular-font-size + 1;
+    font-family: 'Montserrat-Medium';
     border-radius: 3px;
+    border: .75px solid #3E8541;
   }
 
   .btn-locate-me {
@@ -31,7 +33,7 @@
     background-color: $bg-gray;
     border: 1px solid $border-gray;
     margin-right: 6px;
-    max-width: 150px;
+    max-width: 147px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -44,7 +46,7 @@
 
     span {
       font-family: 'OpenSans-SemiBold';
-      font-size: $small-font-size - 2;
+      font-size: $mobile-regular-font-size + 1;
       color: $text-gray;
       line-height: 40px;
     }
