--- a/front-end/src/containers/Home/styles.scss
+++ b/front-end/src/containers/Home/styles.scss
@@ -3,7 +3,7 @@
 .div-home-container {
 
   .div-location-search-container {
-    width: 775px;
+    width: 755px;
     max-width: 100%;
   }
 
@@ -51,7 +51,7 @@
     flex-direction: column;
 
     .div-featured-menus {
-      max-width: 1540px;
+      max-width: 1400px;
       margin-top: 70px;
       padding-left: 0px;
       padding-right: 0px;
@@ -75,14 +75,17 @@
       margin-top: 60px;
 
       .btn-all-products {
-        width: 294px;
-        height: 69px;
-        border-radius: 8px;
+        width: 247px;
+        height: 53px;
+        border-radius: 5px;
+        font-size: $mobile-regular-font-size - 1;
+        font-family: 'Montserrat-Medium';
+        border: .75px solid #3E8541;
         
         img {
-          width: 26px;
-          height: 26px;
-          margin-left: 20px;
+          width: 20px;
+          height: 20px;
+          margin-left: 25px;
         }
       }
 
@@ -91,8 +94,6 @@
         margin-left: 40px;
     
         .btn-all-products {
-          font-size: 17px;
-          height: 60px;
           width: 100%;
         }
       }
@@ -185,10 +186,12 @@
     }
 
     .btn-share-experience {
-      font-size: $mobile-regular-font-size;
+      font-size: $mobile-regular-font-size - 1;
+      font-family: 'Montserrat-Medium';
+      border: .75px solid #3E8541;
       border-radius: 5px;
-      width: 215px;
-      height: 55px;
+      width: 267px;
+      height: 53px;
       margin-top: 40px;
       margin-left: 50%;
       transform: translateX(-50%);
