--- a/front-end/src/containers/HelpCenter/components/HelpDeliveryPanel/styles.scss
+++ b/front-end/src/containers/HelpCenter/components/HelpDeliveryPanel/styles.scss
@@ -7,8 +7,10 @@
     margin-top: 50px;
 
     img {
-      width: 220px;
-      margin-right: 40px;
+      width: 120px;
+      height: 120px;
+      margin-left: 50px;
+      margin-right: 95px;
     }
 
     .help-delivery-content {
@@ -21,13 +23,5 @@
         margin-bottom: 40px;
       }
     }
-  }
-
-  .separator {
-    background-color: #232222;
-    opacity: 0.85;
-    width: 100%;
-    height: 1px;
-    margin-top: 60px;
   }
 }
