--- a/front-end/src/containers/HelpCenter/components/HelpText/styles.scss
+++ b/front-end/src/containers/HelpCenter/components/HelpText/styles.scss
@@ -7,7 +7,8 @@
   .help-text-title {
     font-size: $regular-font-size - 1;
     font-family: 'Montserrat-SemiBold';
-    margin-left: 15px;
+    margin-bottom: 5px;
+    // margin-left: 15px;
   }
 
   .help-text-content {
