[FE] update about us page

--- a/front-end/src/containers/AboutUs/styles.scss
+++ b/front-end/src/containers/AboutUs/styles.scss
@@ -26,7 +26,7 @@
 
     .about-us-description-title {
       font-size: $regular-font-size + 2;
-      font-family: 'Lato-Regular';
+      font-family: 'Lato-Black';
       margin-bottom: 20px;
     }
 
@@ -37,7 +37,7 @@
 
   .about-us-description-single {
     font-size: $small-font-size;
-    font-family: 'Lato-Regular';
+    font-family: 'Lato-Bold';
     padding: 0 40px;
     color: #333333;
   }
