[FE] update menu modal style

--- a/front-end/src/containers/Modals/MenuModal/component/ExpandableDescription/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/component/ExpandableDescription/styles.scss
@@ -3,7 +3,8 @@
 .div-description-text {
   opacity: 0.58;
   font-size: $mobile-regular-font-size;
-  color: #323232;
+  line-height: 25px;
+  color: black;
   opacity: 0.55;
 
   a {
