--- a/front-end/src/containers/Modals/MenuModal/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/styles.scss
@@ -63,12 +63,13 @@
       .div-menu-info-list {
         display: flex;
         flex-direction: row;
-        margin-top: 35px;
+        margin-top: 25px;
+        width: 440px;
 
         .div-menu-info {
           display: flex;
           flex-direction: column;
-          text-align: center;
+          align-items: center;
           padding: 0 30px;
           width: calc(25% - 1px);
 
@@ -77,11 +78,11 @@
           }
 
           .span-menu-info-value {
-            font-size: 25px;
+            font-size: 30px;
           }
 
           .span-menu-info-title {
-            font-size: $mobile-regular-font-size - 1;
+            font-size: $mobile-regular-font-size;
           }
         }
 
@@ -102,7 +103,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 0 40px 40px 40px;
-    max-width: 660px;
+    max-width: 550px;
 
     .div-menu-modal-description {
       position: relative;
@@ -133,8 +134,7 @@
 
       .div-menu-title {
         font-size: 25px;
-        color: #323232;
-        opacity: 0.7;
+        font-family: 'Montserrat-Bold';
       }
 
       .div-menu-specialities {
@@ -147,8 +147,7 @@
           display: flex;
           flex-direction: column;
           align-items: center;
-          max-width: 50px;
-          margin-right: 40px;
+          margin-right: 30px;
 
           img {
             width: 26px;
@@ -167,54 +166,39 @@
       .div-ingredients-list {
         display: flex;
         flex-direction: column;
-        margin-top: 15px;
+        margin-top: 25px;
         margin-bottom: 20px;
 
         .div-ingredients-list-title {
-          color: #6E6E6E;
           margin-bottom: 5px;
-          font-size: $mobile-regular-font-size;
+          font-size: $mobile-regular-font-size + 1;
+          font-family: 'Montserrat-Bold';
         }
 
         .div-ingredients {
           color: #6F6F6F;
           font-size: $mobile-regular-font-size;
           margin-right: 5px;
-        }
-      }
-
-      .div-recipies-per-week {
-        margin-top: 40px;
-        margin-bottom: 20px;
-
-        .div-recipies-per-week-title {
-          color: #080808;
-        }
-
-        .div-recipies-selection-grid {
-          display: flex;
-          .selection-grid {
-            margin-top: 20px;
-          }
+          line-height: 25px;
         }
       }
 
       .div-special-instructions {
         display: flex;
         flex-direction: column;
-        margin: 0px 20px 0 0;
+        margin: 0px 20px 20px 0;
 
         .div-special-instructions-title {
-          color: #6E6E6E;
-          font-size: $mobile-regular-font-size;
+          font-size: $mobile-regular-font-size + 1;
+          font-family: 'Montserrat-Bold';
         }
 
         .input-special-instructions {
-          border-radius: 9px;
+          border-radius: 4px;
           border: 1px solid #A0A0A0;
-          height: 66px;
-          margin-top: 20px;
-          padding: 15px;
+          height: 40px;
+          margin-top: 15px;
+          padding: 5px;
           resize: none;
         }
       }
@@ -225,12 +209,14 @@
         width: 100%;
         height: 84px;
         background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1));
+        pointer-events: none;
       }
     }
 
     .div-menu-modal-cart {
       position: relative;
       display: flex;
+      justify-content: space-between;
       height: 54px;
       margin-top: 30px;
 
@@ -246,19 +232,15 @@
         margin-left: 10px;
         font-size: $mobile-regular-font-size;
       }
-
-      .btn-add-to-cart-full {
-        width: 100%;
-        margin-left: 0;
-      }
     }
 
     .div-opacity-layer-top {
       position: absolute;
-      top: 50px;
+      top: 40px;
       width: calc(100% - 115px);
       height: 84px;
       background: linear-gradient(to top, rgba(255,255,255,0), rgba(255,255,255,1));
+      pointer-events: none;
     }
   }
 
@@ -333,9 +315,10 @@
         }
 
         .div-menu-info-list {
-          margin-left: -45px;
+          // margin-left: -45px;
           margin-right: -25px;
           margin-top: 20px;
+          width: 100%;
 
           .div-menu-info {
             padding: 0 20px;
@@ -359,7 +342,7 @@
       }
 
       .div-menu-modal-description {
-        max-height: 300px;
+        max-height: unset;
 
         .div-menu-title {
           font-size: $regular-font-size;
