--- a/front-end/src/containers/ServiceAreas/styles.scss
+++ b/front-end/src/containers/ServiceAreas/styles.scss
@@ -1,11 +1,12 @@
 @import "../../styles/variables/variables";
 
 .div-service-area-container {
+  background-color: #FCFCFC;
 
   .div-service-area-banner {
     position: relative;
     height: 300px;
-    background-color: rgb(243, 244, 248);
+    background-color: white;;
     border-bottom: 1px solid #DDDDDD;
     
     .div-service-area-title {
@@ -46,6 +47,7 @@
         padding: 0 5px;
         border-radius: 4px;
         border: 1px solid #70707080;
+        background-color: #FAFAFA;
         margin-right: 10px;
       }
 
@@ -69,22 +71,22 @@
     .div-service-areas-title {
       color: #5B5B5B;
       text-align: center;
-      margin: 60px 0;
+      margin: 45px 0;
       font-size: $small-font-size + 1;
-      font-family: 'Montserrat-Medium';
+      font-family: 'OpenSans-Regular';
     }
 
     .div-service-areas-grid {
       display: grid;
       grid-auto-flow: column;
       grid-template-rows: repeat(9, 1fr);
-      grid-auto-columns: 230px;
+      grid-auto-columns: 210px;
     
       .service-area {
-        color: $green-primary;
-        font-size: $mobile-regular-font-size - 1;
-        height: 70px;
-        line-height: 70px;
+        color: #118816;
+        font-size: $mobile-regular-font-size + 1;
+        height: 65px;
+        line-height: 65px;
 
         &:hover {
           text-decoration: underline;
