--- a/front-end/src/styles/_fonts.scss
+++ b/front-end/src/styles/_fonts.scss
@@ -44,6 +44,11 @@
 }
 
 @font-face {
+  font-family: 'Lato-Black';
+  src: url('../assets/fonts/Lato/Lato-Black.ttf');
+}
+
+@font-face {
   font-family: 'Inkfree';
   src: url('../assets/fonts/Inky/Inkfree.ttf');
 }
