--- a/front-end/src/containers/HowItWorks/components/MealPlan/styles.scss
+++ b/front-end/src/containers/HowItWorks/components/MealPlan/styles.scss
@@ -4,6 +4,7 @@
   background-color: white;
   box-shadow: 5px 5px 10px rgba(0,0,0,0.16);
   border-radius: 3px;
+  border: 1px solid #9D9D9D;
   display: flex;
   flex-direction: column;
 
@@ -44,6 +45,11 @@
     font-size: $mobile-regular-font-size;
     text-align: center;
     margin-top: 30px;
+
+    span {
+      font-family: 'Montserrat-Bold';
+      font-size: $small-font-size - 1;
+    }
   }
 
   .div-meal-plan-total-price {
