--- a/front-end/src/containers/Menus/components/MenusHeader/styles.scss
+++ b/front-end/src/containers/Menus/components/MenusHeader/styles.scss
@@ -68,25 +68,18 @@
     .div-zip-code {
       display: flex;
       align-items: center;
-      margin-right: 70px;
+      margin-right: 35px;
 
-      img {
+      .img-pinpoint {
         height: 22px;
         margin-right: 3px;
       }
 
-      span {
+      .span-title {
         font-family: 'CeraPro-Medium';
         font-size: $mobile-regular-font-size;
-      }
-
-      .span-title {
         color: #787878;
-      }
-
-      .span-address {
-        color: $green-primary;
-        margin-left: 5px;
+        margin-right: 5px;
       }
     }
   }
