--- a/front-end/src/containers/Settings/EditProfile/styles.scss
+++ b/front-end/src/containers/Settings/EditProfile/styles.scss
@@ -1,87 +1,58 @@
 @import "../../../styles/variables/variables";
 
 .div-edit-profile-container {
-  width: 630px;
-  margin: 0 auto;
+  margin-top: -50px;
 
   .div-profile-info {
-    flex-grow: 1;
-    color: $text-light-gray;
-    display: flex;
+    width: 380px;
+    margin: 0 auto;
+    padding: 35px 60px;
+    box-shadow: $shadow-primary;
 
-    .div-profile-info-title-list {
-      margin-right: 110px;
-      flex-shrink: 0;
-
-      .div-profile-info-title {
-        height: 70px;
-        font-family: 'Montserrat-Bold';
-        font-size: $small-font-size;
-      }
-    }
-    .div-profile-info-text-list {
-      .div-profile-info-text {
-        height: 70px;
-        font-size: $small-font-size;
-      }
-
-      .password {
-        font-size: $mobile-small-font-size;
-        padding-top: 5px;
-      }
+    .div-title {
+      color: #4BCC25;
+      font-family: 'Montserrat-SemiBold';
+      font-size: $small-font-size + 1;
+      margin-bottom: 25px;
     }
 
-    .div-profile-info-input-list {
-      margin-top: -15px;
+    .div-profile-input {
+      font-size: $mobile-regular-font-size;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+
+      .span-input-title {
+        color: #B2B2B2;
+      }
+
+      .span-input-value, input {
+        font-family: 'Montserrat-SemiBold';
+        color: #747474;
+        margin-top: 5px;
+      }
+
+      .span-input-value { 
+        line-height: 25px;
+      }
 
       input {
-        width: 100%;
-        height: 50px;
-        border: 1px solid rgba(112, 112, 112, 0.38);
-        box-shadow: $shadow-primary;
-        padding: 0 15px;
-        font-size: $small-font-size;
-        color: $text-light-gray;
-        margin-bottom: 20px;
-      }
-
-      .input-readonly {
         border: unset;
-        box-shadow: unset;
-        padding: unset;
-      }
-
-      .div-profile-info-double-input {
-        display: flex;
-        justify-content: space-between;
-
-        input {
-          width: calc(50% - 5px);
-        }
-      }
-      
-      .div-profile-info-input {
-
+        height: 25px;
       }
     }
   }
 
   .button {
-    border-radius: 3px;
-    font-size: $mobile-regular-font-size;
+    font-size: $mobile-regular-font-size - 2;
     font-family: 'Montserrat-Medium';
-    width: 150px;
-    height: 48px;
+    width: 132px;
+    height: 42px;
+    border-radius: 21px;
     margin-left: 50%;
     transform: translateX(-50%);
-    margin-top: 90px;
-  }
-
-  .btn-edit { 
+    margin-top: 10px;
     background-color: #525252;
-  }
-
-  .btn-save {
-    background-color: $green-primary;
+    box-shadow: unset;
   }
 }
