--- a/front-end/src/containers/SideCart/components/SideCartSummary/styles.scss
+++ b/front-end/src/containers/SideCart/components/SideCartSummary/styles.scss
@@ -76,6 +76,13 @@
     }
   }
 
+  .side-cart-summary-pricing-instruction {
+    margin-bottom: 30px;
+    font-size: $mobile-regular-font-size - 2;
+    color: #E21818;
+    text-align: center;
+  }
+
   @media (max-width: 414px) {
     padding: 0 20px;
 
