--- a/front-end/src/containers/SideCart/styles.scss
+++ b/front-end/src/containers/SideCart/styles.scss
@@ -44,16 +44,17 @@
     margin-top: 50px;
 
     .img-empty-cart {
-      height: 206px;
+      height: 122px;
     }
     .span-empty-title {
       font-size: $regular-font-size;
-      font-family: 'Montserrat-Medium';
+      font-family: 'Brandon-Medium';
       color: #A7A7A7;
       opacity: 0.65;
       margin-top: 20px;
     }
     .span-empty-subtitle {
+      font-family: 'Brandon-Regular';
       font-size: 12px;
       color: #272727;
       opacity: 0.84;
