--- a/front-end/src/styles/_fonts.scss
+++ b/front-end/src/styles/_fonts.scss
@@ -80,6 +80,11 @@
 }
 
 @font-face {
+  font-family: 'Brandon-Medium';
+  src: url('../assets/fonts/Brandon/Brandon_med.otf') format('opentype');
+}
+
+@font-face {
   font-family: 'CeraPro-Medium';
   src: url('../assets/fonts/Cera/Cera Pro Medium.otf') format('opentype');
 }
